# crineforge

./: .gitignore  CONTRIBUTING.md  LEGAL_NOTICE.md  README.md  benchmark.py  build_log.txt  check_upload.py  example.py  pyproject.toml  sample.txt  test_mocked.py
crineforge/: __init__.py  __main__.py  core.py
crineforge/data/: __init__.py  enrichment.py  extractor.py  structurer.py  validator.py
crineforge/hyperparams/: auto.py
crineforge/model/: __init__.py  connector.py  gpu.py
crineforge/training/: __init__.py  engine.py  saver.py
crineforge/utils/: diffcheck.py  logger.py  seed.py
docs/: architecture.md  usage.md
tests/: test_extractor.py  test_gpu.py  test_trainer_pipeline.py  test_validator.py
trainforge/: __init__.py  __main__.py  core.py
trainforge/data/: chunker.py  structurer.py  validator.py
trainforge/hyperparams/: __init__.py
trainforge/model/: connector.py
trainforge/training/: engine.py
trainforge/utils/: logger.py
