[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "Crineforge"
version = "0.1.0"
description = "Forge intelligent models from raw data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Abhishek", email = "abhi955513@gmail.com" }
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "peft>=0.7.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.42.0",
    "trl>=0.7.11",
    "PyMuPDF>=1.23.0",
    "pandas>=2.0.0"
]


[project.urls]
Homepage = "https://github.com/abhishek-dev-code/crineforge"


[project.scripts]
crineforge = "crineforge.__main__:main"