[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "crineforge"
version = "0.2.7"
description = "Forge intelligent models from raw data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
  { name = "The Crineforge Developers" }
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.45.0,<5.0.0",
    "peft>=0.7.0,<0.18.0",
    "accelerate>=0.27.0",
    "bitsandbytes==0.43.1",
    "triton==3.6.0; sys_platform != 'win32'",
    "trl>=0.11.0,<0.16.0",
    "PyMuPDF>=1.23.0",
    "pandas>=2.0.0",
    "datasets>=2.14.0"
]


[project.urls]
Homepage = "https://github.com/crineforge/crineforge"


[project.scripts]
crineforge = "crineforge.__main__:main"